rework stream code, images are now compressed

--- a/t3_2000.md
+++ b/t3_2000.md
@@ -64,7 +64,7 @@ Ich werde aber nur die Konzepte in dieser Arbeit erläutern, welche relevant fü
 Definition: Mit IaC (Infrastructure as Code) wird die Infrastruktur durch Code – und nicht durch manuelle Prozesse – verwaltet und provisioniert.
 
 Es werden Konfigurationsdateien erstellt, welche die gesamten Infrastrukturspezifikationen enthalten, wodurch Konfigurationen einfacher bearbeitet und verteilt werden können. Es stellt außerdem sicher, dass jedes Mal dieselbe Umgebung provisioniert wird. 
-Indem Konfigurationsspezifikationen kodifiziert und dokumentiert werden, unterstützt IaC das Konfigurationsmanagement und hilft, undokumentierte Ad-hoc-Änderungen der Konfiguration zu vermeiden. Ein wichtiger Bestandteil von IaC ist die Versionskontrolle. Wie jede andere Software-Quellcodedatei sollten auch Konfigurationsdateien der Quellkontrolle unterliegen. Durch die Bereitstellung der Infrastruktur als Code kann die Infrastruktur auch in modulare Komponenten aufgeteilt und dann durch Automatisierung auf unterschiedliche Weise kombiniert werden können. Durch eine automatisierte Infrastrukturprovisionierung mit IaC müssen Server, Betriebssysteme, Storage und andere Infrastrukturkomponenten von den Entwicklerinnen und Entwicklern nicht jedes Mal, wenn diese eine Anwendung entwickeln oder bereitstellen, manuell provisioniert und verwaltet werden. Durch die Codierung der Infrastruktur entsteht eine Vorlage, der bei der Provisionierung gefolgt werden kann. Die Atos Cloud Plattform dient unter anderem als IaC-Plattform. [@WasIstIaC]
+Indem Konfigurationsspezifikationen kodifiziert und dokumentiert werden, unterstützt IaC das Konfigurationsmanagement und hilft, undokumentierte Ad-hoc-Änderungen der Konfiguration zu vermeiden. Ein wichtiger Bestandteil von IaC ist die Versionskontrolle. Wie jede andere Software-Quellcodedatei sollten auch Konfigurationsdateien der Quellkontrolle unterliegen. Durch die Bereitstellung der Infrastruktur als Code kann die Infrastruktur auch in modulare Komponenten aufgeteilt und dann durch Automatisierung auf unterschiedliche Weise kombiniert werden können. Durch eine automatisierte Infrastrukturprovisionierung mit IaC müssen Server, Betriebssysteme, Storage und andere Infrastrukturkomponenten von den Entwicklerinnen und Entwicklern nicht jedes Mal, wenn diese eine Anwendung entwickeln oder bereitstellen, manuell provisioniert und verwaltet werden. Durch die Codierung der Infrastruktur entsteht eine Vorlage, der bei der Provisionierung gefolgt werden kann. Die Atos Cloud Plattform dient unter anderem als IaC-Plattform. 
 
 
 #### Risiken in Verbindung mit IaC:
@@ -182,7 +182,7 @@ Elastic Load Balancing unterstützt die folgenden Arten von Load Balancern:
 - Gateway Load Balancer (GLB)
 - Classic Load Balancer (ClassicLB)
 
-Ein wesentlicher Unterschied besteht darin, wie die Load Balancer-Typen konfiguriert werden. Bei Application Load Balancers, Network Load Balancers und Gateway Load Balancers werden Ziele in Target Groups registriert und leiten den Verkehr zu den Target Groups. Bei klassischen Load Balancern registriert man Instanzen direkt beim Load Balancer." [@HowElasticLoad] 
+Ein wesentlicher Unterschied besteht darin, wie die Load Balancer-Typen konfiguriert werden. Bei Application Load Balancers, Network Load Balancers und Gateway Load Balancers werden Ziele in Target Groups registriert und leiten den Verkehr zu den Target Groups. Bei klassischen Load Balancern registriert man Instanzen direkt beim Load Balancer."  
 
 Funktionsweise der Application Load Balancer: 
 
@@ -192,7 +192,7 @@ Ein Listener prüft auf Verbindungsanfragen von Clients unter Verwendung des kon
 
 Jede Target Group leitet Anfragen an ein oder mehrere registrierte Targets weiter, z. B. an EC2-Instanzen, und verwendet dabei das (HTTP)-Protokoll und die Portnummer, die gewünscht sind. Ein Target kann bei mehreren Target Groups registrieren. Es können Zustandsprüfungen für jede Target Group konfiguriert werden. 
 
-Das folgende Diagramm veranschaulicht die grundlegenden Komponenten. Es muss beachtet werden, dass jeder Listener eine Standardregel enthält und weitere Regeln enthalten kann, die Anfragen an eine andere Target Group weiterleitet. Laut den Best Practices soll ein Target mindestens bei zwei Target Groups registriert werden aufgrund von Redundanz und Verfügbarkeit." [@WhatApplicationLoad] 
+Das folgende Diagramm veranschaulicht die grundlegenden Komponenten. Es muss beachtet werden, dass jeder Listener eine Standardregel enthält und weitere Regeln enthalten kann, die Anfragen an eine andere Target Group weiterleitet. Laut den Best Practices soll ein Target mindestens bei zwei Target Groups registriert werden aufgrund von Redundanz und Verfügbarkeit."  
 
 
 ![Modell zur Funktionsweise der Application Loadbalancer in AWS](component_architecture.png){#fig:ALB}
@@ -201,10 +201,10 @@ Das folgende Diagramm veranschaulicht die grundlegenden Komponenten. Es muss bea
 
 Im Folgenden werden einige wichtige Begriffe im Kontext der AWS Public Cloud erklärt, um den Code der Powershell-Skripts verständlicher zu machen.
 
-- VPC (Virtual Private Cloud):  Eine VPC ist ein virtuelles Netzwerk, das einem herkömmlichen Netzwerk, das in eigenen Rechenzentrum betreiben wird, sehr ähnlich ist. Nachdem eine VPC erstellt ist, können Subnetze hinzugefügt.[@WasIstAmazon]
-- Subnet: Ein Subnet ist ein Bereich an IP-Adressen in Ihrer VPC. Ein Subnet muss sich in einer einzigen Availability Zone befinden. Nachdem die Subnetze hinzugefügt wurden, können AWS-Ressourcen in der VPC bereitgestellt werden. [@WasIstAmazon]
+- VPC (Virtual Private Cloud):  Eine VPC ist ein virtuelles Netzwerk, das einem herkömmlichen Netzwerk, das in eigenen Rechenzentrum betreiben wird, sehr ähnlich ist. Nachdem eine VPC erstellt ist, können Subnetze hinzugefügt.
+- Subnet: Ein Subnet ist ein Bereich an IP-Adressen in Ihrer VPC. Ein Subnet muss sich in einer einzigen Availability Zone befinden. Nachdem die Subnetze hinzugefügt wurden, können AWS-Ressourcen in der VPC bereitgestellt werden. 
 - Security Group: Eine Sicherheitsgruppe steuert den Datenverkehr, der die Ressourcen erreichen und verlassen darf, mit denen er verknüpft ist. Nachdem beispielsweise eine Sicherheitsgruppe mit einer EC2-Instance verknüpft wird, steuert sie den ein- und ausgehenden Datenverkehr für die Instance.
-Wenn eine VPC erstellt wird, verfügt diese über eine Standardsicherheitsgruppe. Es können für jede VPC auch zusätzliche Sicherheitsgruppen erstellt werden. Es können Sicherheitsgruppen nur Ressourcen in der VPC zugeordten werden, für die sie erstellt wurden. [@SteuernSieDatenverkehr]
+Wenn eine VPC erstellt wird, verfügt diese über eine Standardsicherheitsgruppe. Es können für jede VPC auch zusätzliche Sicherheitsgruppen erstellt werden. Es können Sicherheitsgruppen nur Ressourcen in der VPC zugeordten werden, für die sie erstellt wurden. 
 
 ## Ausarbeitung - Powershell Skripte
 
@@ -704,7 +704,7 @@ In diesem Abschnitt sollen Grundlagen wie verwendete Technologien, Lösungsverfa
 
 #### Angular 
 
-"Angular ist die nächste Version des OpenSource Frameworks AngularJS. Die Code-Basis wurde komplett neu geschrieben und nutzt nun als Basis die Sprache TypeScript. Grundidee und Konzepte des Frameworks sind jedoch identisch geblieben was eine Migration oder sogar einen hybriden Einsatz der Versionen ermöglicht. Der Fokus des Projektes hat sich von der Entwicklung eines Frameworks auf die Entwicklung einer ganzen Plattform für WebAnwendungen erweitert. Aktuell arbeiten über 30 MitarbeiterInnen fest an dem Projekt und werden von hunderten Entwicklern aus der OpenSource-Community unterstützt. Durch die Einführung von Werkzeugen wie dem Kommandozeilenwerkzeug Angular-CLI können Projekte jetzt noch schneller erstellt und in Produktion überführt werden." [@WasSindAngulara] 
+"Angular ist die nächste Version des OpenSource Frameworks AngularJS. Die Code-Basis wurde komplett neu geschrieben und nutzt nun als Basis die Sprache TypeScript. Grundidee und Konzepte des Frameworks sind jedoch identisch geblieben was eine Migration oder sogar einen hybriden Einsatz der Versionen ermöglicht. Der Fokus des Projektes hat sich von der Entwicklung eines Frameworks auf die Entwicklung einer ganzen Plattform für WebAnwendungen erweitert. Aktuell arbeiten über 30 MitarbeiterInnen fest an dem Projekt und werden von hunderten Entwicklern aus der OpenSource-Community unterstützt. Durch die Einführung von Werkzeugen wie dem Kommandozeilenwerkzeug Angular-CLI können Projekte jetzt noch schneller erstellt und in Produktion überführt werden."  
 
 #### Angular: Tour of Heroes - Eine Einführung in die Entwicklung von Web-Anwendungen 
 
@@ -727,7 +727,7 @@ Um ein grundlegendes Verständnis von der Funktionsweise von Angular zu bekommen
 
 Die Windows Powershell wurde hauptsächlich dazu genutzt, um das Bereitstellen von Google Cloud Resourcen zu automatisieren.
 Anstelle der manuellen Eingabe von Spezifikationen, werden Skripts verwendet, welche die gewünschten Resourcen anzufordern. 
-"Mit Cloud Tools for PowerShell kann man für Windows-Arbeitslasten, die auf der Google Cloud Platform ausgeführt werden, Skripte erstellen und die Arbeitslasten automatisieren und verwalten." [@CloudToolsPowerShell]
+"Mit Cloud Tools for PowerShell kann man für Windows-Arbeitslasten, die auf der Google Cloud Platform ausgeführt werden, Skripte erstellen und die Arbeitslasten automatisieren und verwalten." 
 
 
 Hier einige Beispiele: 
@@ -755,15 +755,15 @@ Auch im Entwicklungsprozess des Backends wurde Powershell verwendet, um lokale E
 
 #### Docker 
 
-"Docker ist eine offene Plattform für die Entwicklung, Bereitstellung und Ausführung von Anwendungen. Docker ermöglicht es, Anwendungen von Infrastruktur zu trennen, damit Software schnell bereitgestellt werden kann. Mit Docker kann Infrastruktur auf die gleiche Weise wie Anwendungen verwalten werden. Indem die Vorteile der Docker-Methoden für die schnelle Bereitstellung, das Testen und die Implementierung von Code genutzt werden, wird die Zeitspanne zwischen dem Schreiben des Codes und seiner Ausführung in der Produktion deutlich verkürzt." [@DockerOverview2022]
+"Docker ist eine offene Plattform für die Entwicklung, Bereitstellung und Ausführung von Anwendungen. Docker ermöglicht es, Anwendungen von Infrastruktur zu trennen, damit Software schnell bereitgestellt werden kann. Mit Docker kann Infrastruktur auf die gleiche Weise wie Anwendungen verwalten werden. Indem die Vorteile der Docker-Methoden für die schnelle Bereitstellung, das Testen und die Implementierung von Code genutzt werden, wird die Zeitspanne zwischen dem Schreiben des Codes und seiner Ausführung in der Produktion deutlich verkürzt." 
 
-"Es besteht die Möglichkeit, eine Anwendung in einer lose isolierten Umgebung, einem Container, zu verpacken und auszuführen. Die Isolierung und Sicherheit ermöglicht es, viele Container gleichzeitig auf einem bestimmten Host auszuführen. Container sind leichtgewichtig und enthalten alles, was für die Ausführung der Anwendung erforderlich ist, sodass nicht darauf geachtet werden muss, was derzeit auf dem Host installiert ist." [@DockerOverview2022]
+"Es besteht die Möglichkeit, eine Anwendung in einer lose isolierten Umgebung, einem Container, zu verpacken und auszuführen. Die Isolierung und Sicherheit ermöglicht es, viele Container gleichzeitig auf einem bestimmten Host auszuführen. Container sind leichtgewichtig und enthalten alles, was für die Ausführung der Anwendung erforderlich ist, sodass nicht darauf geachtet werden muss, was derzeit auf dem Host installiert ist." 
 
 Vorteile:
 
 - Entwicklung von Anwendungen und unterstützende Komponenten in Containern
 - Container wird zur Einheit für die Verteilung und das Testen von Anwendungen
-- Bereitstellen der Anwendung in Produktionsumgebung als Container oder orchestrierten Dienst, was unabhängig davon funktioniert, ob die Produktionsumgebung ein lokales Rechenzentrum, ein Cloud-Anbieter oder eine Mischung aus beidem ist [@DockerOverview2022]
+- Bereitstellen der Anwendung in Produktionsumgebung als Container oder orchestrierten Dienst, was unabhängig davon funktioniert, ob die Produktionsumgebung ein lokales Rechenzentrum, ein Cloud-Anbieter oder eine Mischung aus beidem ist 
 
 
 #### Flask Python
@@ -787,15 +787,15 @@ Flask wird oft als Mikroframework bezeichnet. Es ist darauf ausgelegt, den Kern 
 
 Warum Flask als Backend Framework?
 
-Im Gegensatz zu Django, ein weiteres python-basiertes Webframework ist Flask sehr "Pythonic" heißt es ist einfach zu verstehen und hat keine so große Lernkurve. Zusätzlich dazu ist Flask sehr explizit, was bedeutet das der Code sehr einfach zu lesen ist. Es ist zwar ein Mikroframework aber das nicht das man den ganzen Code in eine Datei schreibt, mehrere Dateien sollten für komplexere Programme verwendet werden. Das Framework ist simpel aber dennoch erweiterbar und alle Entscheidungen liegen bei dem Entwickler, z.b. welche Datenbank man benutzt. Flask ist sehr beliebt, weshalb auch eine große Opensource Community enstanden ist, welche viele weitere Erweiterungen entwickelt haben." [@WhatFlaskPython]
+Im Gegensatz zu Django, ein weiteres python-basiertes Webframework ist Flask sehr "Pythonic" heißt es ist einfach zu verstehen und hat keine so große Lernkurve. Zusätzlich dazu ist Flask sehr explizit, was bedeutet das der Code sehr einfach zu lesen ist. Es ist zwar ein Mikroframework aber das nicht das man den ganzen Code in eine Datei schreibt, mehrere Dateien sollten für komplexere Programme verwendet werden. Das Framework ist simpel aber dennoch erweiterbar und alle Entscheidungen liegen bei dem Entwickler, z.b. welche Datenbank man benutzt. Flask ist sehr beliebt, weshalb auch eine große Opensource Community enstanden ist, welche viele weitere Erweiterungen entwickelt haben." 
 
 #### PostgreSQL
 
-"PostgreSQL ist eine relationale Datenbank, die auf der POSTGRES Version 4.2 basiert. Die Größe einer Datenbank ist unbegrenzt und eine Tabelle kann bis zu 64 Terra-Byte groß werden. Bei der Anzahl der Datensätze gibt es keine Grenzen (der verfügbare Plattenplatz einmal ausgenommen). Die Anzahl der Spalten ist auf 1600 begrenzt und jede Spalte nimmt maximal Daten bis zu einem Gigabyte auf. Ein weiterer Pluspunkt der Datenbank sind die Funktionen. Mit ihnen kann man direkt SQL-Befehle auf der Datenbank ausführen."[@WasIstPostgreSQL]
+"PostgreSQL ist eine relationale Datenbank, die auf der POSTGRES Version 4.2 basiert. Die Größe einer Datenbank ist unbegrenzt und eine Tabelle kann bis zu 64 Terra-Byte groß werden. Bei der Anzahl der Datensätze gibt es keine Grenzen (der verfügbare Plattenplatz einmal ausgenommen). Die Anzahl der Spalten ist auf 1600 begrenzt und jede Spalte nimmt maximal Daten bis zu einem Gigabyte auf. Ein weiterer Pluspunkt der Datenbank sind die Funktionen. Mit ihnen kann man direkt SQL-Befehle auf der Datenbank ausführen."
 
 #### Postman
 
-"Postman ist eines der beliebtesten Werkzeuge zum Testen von APIs (Application Programming Interfaces). Haupteinsatzgebiet ist das Testen von REST APIs auf HTTP-Basis. Der grundlegende Aufbau fokussiert sich dabei auf das Verarbeiten und Validieren von Requests und deren Responses. HTTP-Requests lassen sich in Postman mit zugehörigen Parametern über den visuellen Request-Builder spezifizieren und absenden. Die Responses können direkt angesehen und ausgewertet werden, sei es grafisch oder über die interne Programmierschnittstelle von Postman mittels JavaScript. Prinzipiell können in Postman alle Aspekte von einem Request dargestellt und transparent geändert werden können, u.a. die Request-Art, Authentifizierung, die übergebenen Parameter oder die lokalen Cookies. Hilfreich ist dies nicht nur bei der Entwicklung von eigenen neuen APIs, sondern auch bei der Verwendung von bereits existierenden, da leicht ersichtlich ist welche Parameter übergeben werden und wie der Rückgabewert aussieht."[@siebertPostmanAPI]
+"Postman ist eines der beliebtesten Werkzeuge zum Testen von APIs (Application Programming Interfaces). Haupteinsatzgebiet ist das Testen von REST APIs auf HTTP-Basis. Der grundlegende Aufbau fokussiert sich dabei auf das Verarbeiten und Validieren von Requests und deren Responses. HTTP-Requests lassen sich in Postman mit zugehörigen Parametern über den visuellen Request-Builder spezifizieren und absenden. Die Responses können direkt angesehen und ausgewertet werden, sei es grafisch oder über die interne Programmierschnittstelle von Postman mittels JavaScript. Prinzipiell können in Postman alle Aspekte von einem Request dargestellt und transparent geändert werden können, u.a. die Request-Art, Authentifizierung, die übergebenen Parameter oder die lokalen Cookies. Hilfreich ist dies nicht nur bei der Entwicklung von eigenen neuen APIs, sondern auch bei der Verwendung von bereits existierenden, da leicht ersichtlich ist welche Parameter übergeben werden und wie der Rückgabewert aussieht."
 
 ## Ausarbeitung - Automatisierung Feedbackprozess
 
@@ -819,7 +819,7 @@ Für diese Aufgabe hat sich ein kleines Projektteam, aus vier Studenten (inklusi
 
 ![Aufbau](Web-Architektur.png){#fig:webarchitektur}
 
-In dieser Abbildung ist die Architektur des Projekts dargestellt. Die Anwendung soll nur von Studenten und Betreuer der Abteilung benutzt werden können. Diese sollen in der Zukunft über einen Backend-Service (vorraussichtlich über den Firebase Authentication Dienst [@FirebaseAuthentication] ) authentifiziert und in der Datenbank geloggt werden. Nach dem Einloggen können Studenten ihr Feedbackformular ausfüllen und abschicken. Die Daten werden einer Request an das Backend gesendet, welche die Bewertungen in der Datenbank speichert. Über das Dashboard können Betreuer die Ergebnisse der Feedbackbögen in Form von geeigneter Metriken einsehen. Die Entwicklung des Frontends erfolgt im Rahmen des Angular Web-Frameworks, die Continous Integration und Continuous Deployment wird von dem Rest des Projektteams ausgearbeitet. Das Backend und die API wird von mir im Python Flask Framework implementiert.
+In dieser Abbildung ist die Architektur des Projekts dargestellt. Die Anwendung soll nur von Studenten und Betreuer der Abteilung benutzt werden können. Diese sollen in der Zukunft über einen Backend-Service (vorraussichtlich über den Firebase Authentication Dienst  ) authentifiziert und in der Datenbank geloggt werden. Nach dem Einloggen können Studenten ihr Feedbackformular ausfüllen und abschicken. Die Daten werden einer Request an das Backend gesendet, welche die Bewertungen in der Datenbank speichert. Über das Dashboard können Betreuer die Ergebnisse der Feedbackbögen in Form von geeigneter Metriken einsehen. Die Entwicklung des Frontends erfolgt im Rahmen des Angular Web-Frameworks, die Continous Integration und Continuous Deployment wird von dem Rest des Projektteams ausgearbeitet. Das Backend und die API wird von mir im Python Flask Framework implementiert.
 
 ### Implementierung Backend
 
